# backend-real-estate-api

./: .env.example  .gitignore  .vercelignore  Dockerfile  QUICK_TEST.md  README.md  VERCEL_CONFIG.md  VERCEL_SETUP.md  apartments.json  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-api.md  vercel.json
docs/: CALENDAR_DATA_EXAMPLE.json  CALENDAR_SCORING_EXAMPLE.md  CHECK_SCHEDULE_API.md  DEPLOYMENT.md  README.md  REDEPLOY.md  SETUP_GITHUB.md  calendar_viewer.html
frontend/: README.md  app.py
models/: __init__.py  schemas.py
scripts/: README.md  test-api.sh
services/: __init__.py  ai_service.py  calendar_service.py  prompt.md
static/: schedule.html
utils/: __init__.py  apartment_loader.py  calendar_init.py  schedule_generator.py
