[project]
name = "backend-real-estate-api"
version = "1.0.0"
description = "FastAPI Real Estate Tool Calls API for Vapi integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "google-genai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

